--- a/TodoList/res/layout/archived.xml
+++ b/TodoList/res/layout/archived.xml
@@ -9,7 +9,7 @@
     tools:context="com.rjynndee.todolist.MainActivity" >
 
     <ListView
-        android:id="@+id/listofTodosList"
+        android:id="@+id/listofTodosArchiveList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true" >
