--- a/TodoList/res/menu/list_to_dos.xml
+++ b/TodoList/res/menu/list_to_dos.xml
@@ -7,5 +7,6 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
+    <item android:id="@+id/archiveStatsMenu" android:onClick="showStats" android:title="View Statistics"></item>
 
 </menu>
