--- a/TodoList/res/layout/selectcheckboxes_layout.xml
+++ b/TodoList/res/layout/selectcheckboxes_layout.xml
@@ -15,6 +15,8 @@
     <CheckBox
         android:id="@+id/selectthischeckbox"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:enabled="false"
+        android:focusable="false"/>
 
 </LinearLayout>
