--- a/TodoList/res/layout/selectmultiplelayout.xml
+++ b/TodoList/res/layout/selectmultiplelayout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
 
     <ListView
         android:id="@+id/SelectMultipleListView"
@@ -17,7 +17,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:text="Email Selected" />
+        android:onClick="EmailSelectedItems"
+        android:text="Email Selected Items" />
 
     <Button
         android:id="@+id/selectAllButton"
