--- a/TodoList/res/menu/main.xml
+++ b/TodoList/res/menu/main.xml
@@ -8,7 +8,7 @@
         android:showAsAction="never"
         android:title="@string/action_settings"/>
     <item android:id="@+id/viewArchivedItem" android:title="View Archived Items" android:onClick="goArchived"></item>
-    <item android:id="@+id/selectAllItem" android:title="Select All" android:onClick="SelectAll"></item>
+    <item android:id="@+id/selectAllItem" android:title="Select Multiple" android:onClick="goSelectMultiple"></item>
     <item android:id="@+id/viewSummaryItem" android:title="View summary statistics" android:onClick="showStats"></item>
 
 </menu>
