finished all functionality requirements

--- a/TodoList/res/layout/selectmultiplelayout.xml
+++ b/TodoList/res/layout/selectmultiplelayout.xml
@@ -26,6 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:text="SelectAll" />
+        android:onClick="SelectAll"
+        android:text="Select All" />
 
 </RelativeLayout>
