changed some UI inefficiencies

--- a/TodoList/res/layout/selectmultiplelayout.xml
+++ b/TodoList/res/layout/selectmultiplelayout.xml
@@ -7,7 +7,8 @@
         android:id="@+id/SelectMultipleListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/emailSelectButton" >
+        android:layout_below="@+id/emailSelectButton"
+        android:layout_alignParentTop="true" >
 
     </ListView>
 
