changed warnings and changed app name

--- a/TodoList/res/layout/checkboxes_layout.xml
+++ b/TodoList/res/layout/checkboxes_layout.xml
@@ -19,6 +19,6 @@
         android:id="@+id/TodoListViewTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="@string/hello_world" />
 
 </LinearLayout>
