--- a/TodoList/res/layout/archivecheckboxes_layout.xml
+++ b/TodoList/res/layout/archivecheckboxes_layout.xml
@@ -20,6 +20,6 @@
         android:id="@+id/ArchiveTodoListViewTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="@string/hello_world" />
 
 </LinearLayout>
