--- a/TodoList/res/layout/archived.xml
+++ b/TodoList/res/layout/archived.xml
@@ -11,8 +11,7 @@
     <ListView
         android:id="@+id/listofTodosArchiveList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true" >
+        android:layout_height="wrap_content" >
 
     </ListView>
 
