--- a/TodoList/res/layout/selectcheckboxes_layout.xml
+++ b/TodoList/res/layout/selectcheckboxes_layout.xml
@@ -5,12 +5,11 @@
 
     <TextView
         android:id="@+id/selectitemTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="323dp"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/selectthischeckbox"
         android:layout_alignParentLeft="true"
-        android:layout_weight="1.37"
-        android:text="TextView" />
+        android:text="@string/hello_world" />
 
     <CheckBox
         android:id="@+id/selectthischeckbox"
