--- a/TodoList/res/layout/archivecheckboxes_layout.xml
+++ b/TodoList/res/layout/archivecheckboxes_layout.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.rjynndee.todolist.ListToDosActivity">
+    tools:context="com.rjynndee.todolist.ArchiveActivity">
 
     <CheckBox
         android:id="@+id/ArchiveToDoCheckBox"
